load("@com_github_dtmx_flow//rules/go:def.bzl", "go_binary", "go_library")

go_library(
    name = "pretty_lib",
    srcs = ["main.go"],
    importpath = "github.com/dtmx/primary-id/play/pretty",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "pretty",
    embed = [":pretty_lib"],
    visibility = ["//visibility:public"],
)
